# raylib3d_ecs

./: .gitignore  CMakeLists.txt  CMakePresets.json  builder.bat  imgui.ini  run.bat
assets/models/: powerup.glb  robot.glb  robot1.gltf
assets/raygui_styles/: boxonbox.rgs
assets/shaders/: blue.fs  blue.vs  outline.fs  outline_base.vs  shadow_depth.fs  shadow_depth.vs  shadow_scene.fs  shadow_scene.vs
libs/imgui/: CMakeLists.txt
libs/imgui/backends/: imgui_impl_glfw.cpp
libs/raygui_styles/: boxonbox.h
libs/raylib/: CMakeLists.txt  CMakeOptions.txt
libs/rlImGui/: CMakeLists.txt
src/: draw.h  main.cpp  main.h
src/assets/: asset_list.h  asset_loader.cpp  asset_loader.h  assets.cpp  assets.h
src/components/: animations.h  attach.h  cmpt_helpers.h  components.h  loot.h  notifications.h  stats.h  status_effects.h  tags.h  weapon.h
src/data/: entity.h  global_data.cpp  global_data.h  loot.cpp  loot.h
src/data/game/: game.cpp  game.h  tilemap.h
src/data/notifications/: notification.cpp  notification.h
src/data/player/: player.cpp  player.h
src/debug/: debug_window.cpp  debug_window.h
src/draw/: draw_guard.h  rgui.cpp  rgui.h
src/draw/entities/: draw_entities.cpp  draw_entities.h
src/draw/hud/: hud.cpp  hud.h
src/resources/: asset_loader.cpp  asset_loader.h  assets.cpp  assets.h
src/sound/: sound_player.cpp  sound_player.h
src/spawners/: damage_zone.h
src/spawners/camera/: camera.cpp
src/spawners/enemies/: brute.cpp  brute.h  grunt.cpp  grunt.h
src/spawners/enemy/: enemy.cpp  enemy.h
src/spawners/equip/weapon/: grenade.cpp  grenade.h  grenade_launcher.cpp  grenade_launcher.h  pistol.cpp  pistol.h  rifle.h  riflle.cpp  shotgun.cpp  shotgun.h  smg.cpp  weapons.h
src/spawners/events/: loot_received_event.h  notification.cpp
src/spawners/loot/: loot.cpp  loot.h
src/spawners/map/: map.cpp
src/spawners/notifications/: notification.cpp  notification.h
src/spawners/player/: player.cpp  player.h
src/spawners/projectile/: bullet.cpp  bullet.h  grenade.cpp
src/spawners/system/camera/: camera.cpp  camera.h
src/spawners/system/events/: loot_pickedup_event.h  loot_received_event.h  notification.cpp  notification.h
src/spawners/system/map/: map.cpp  map.h
src/spawners/system/weapon/: pistol.cpp  pistol.h
src/spawners/terrain/: terrain.cpp  terrain.h
src/spawners/weapon/: pistol.cpp
src/spawners/world/enemies/: brute.cpp  brute.h  enemies.h  grunt.cpp  grunt.h
src/spawners/world/loot/: loot.cpp  loot.h
src/spawners/world/player/: player.cpp  player.h
src/spawners/world/projectile/: bullet.cpp  bullet.h  explosion.cpp  explosion.h  grenade.cpp  grenade.h
src/spawners/world/terrain/: terrain.cpp  terrain.h
src/state/: game.h  nav_request.h  state.h  state_stack.h
src/state/menus/death_menu/: death_menu.cpp  death_menu.h
src/state/menus/options_menu/: options_menu.cpp  options_menu.h
src/state/menus/pause_menu/: pause_menu.cpp  pause_menu.h
src/state/menus/player_levelup/: player_levelup.cpp  player_levelup.h
src/state/menus/start_menu/: start_menu.cpp  start_menu.h
src/state/menus/weapon_select/: weapon_select.cpp  weapon_select.h
src/state/play/: play.cpp  play.h
src/storage/: collision_pairs.h  component_storage.h  quad_tree.h  registry.h  tilemap.cpp  tilemap.h  uniform_gird_2d.h
src/systems/: animation_system.h  attack_system.h  cleanup_system.h  constraint.h  damage_system.h  drop_loot.h  input_system.h  levelup_system.h  movement_system.h  status_effects_system.h  systems.cpp  systems.h  terrain_collision.h  timed_spawn_system.h  velocity_system.h
src/systems/ai/: ai.cpp  ai.h
src/systems/attack/: attack_system.cpp  attack_system.h
src/systems/camera/: camera.cpp  camera.h
src/systems/cleanup/: cleanup.cpp  cleanup.h  destroy.cpp  lifetime_timer.cpp  on_destroy_effects.cpp
src/systems/collision/: collision_handlers.cpp  entity_collision_system.cpp  entity_collision_system.h
src/systems/collisions/: collision_handlers.cpp  collision_handlers.h  damage_on_collision.cpp  destroy_on_collision.cpp  entity_collision_system.cpp  entity_collision_system.h  knockback_on_collision.cpp  pickup_on_collision.cpp  resposition_on_collision.cpp  trigger_on_collision.cpp
src/systems/enemy/: enemy_collision.cpp  enemy_collision.h  enemy_movement.cpp  enemy_movement.h  timed_spawn.cpp  timed_spawn.h
src/systems/events/: loot_pickedup_event_system.cpp  loot_pickedup_event_system.h  notification_event_system.cpp  notification_event_system.h
src/systems/input/: ai_move_intent.cpp  attack_intent.cpp  input_system.h  player_input.cpp
src/systems/loot/: drop_loot.cpp  drop_loot.h  loot_collision.cpp  loot_collision.h  loot_movement.cpp  loot_movement.h
src/systems/notification/: notification.cpp  notification.h
src/systems/player/: player_attack.cpp  player_attack.h  player_collision.cpp  player_collision.h  player_input.cpp  player_input.h  player_levelup.cpp  player_levelup.h  player_movement.cpp  player_movement.h
src/systems/projectile/: bullet_collision.cpp  bullet_collision.h  bullet_movement.cpp  bullet_movement.h  grenade_movement.cpp  grenade_movement.h
src/systems/spawn_enemies/: spawn_enemies.cpp  spawn_enemies.h
src/utils/: cmpt_add.h  debug.h  position.h  position_helpers.h  print.h  profiler.h  rl_utils.h
